# Scoreboard-Plus-Remote

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cross_compile.yml
src/: index.html  main.rs
